.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SHORTNAME__c.field-meta.xml
<CustomField>
    <fullName>SHORTNAME__c</fullName>
    <label>SHORTNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>