.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SOUNDEXNAME__c.field-meta.xml
<CustomField>
    <fullName>SOUNDEXNAME__c</fullName>
    <label>SOUNDEXNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>