.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/STATIND__c.field-meta.xml
<CustomField>
    <fullName>STATIND__c</fullName>
    <label>STATIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>