.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/STMTDAY__c.field-meta.xml
<CustomField>
    <fullName>STMTDAY__c</fullName>
    <label>STMTDAY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>