.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SUNDRYIND__c.field-meta.xml
<CustomField>
    <fullName>SUNDRYIND__c</fullName>
    <label>SUNDRYIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>