.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SUPPSTMT__c.field-meta.xml
<CustomField>
    <fullName>SUPPSTMT__c</fullName>
    <label>SUPPSTMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>