.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_bgl__Accounting_Invoice_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_Invoice_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Invoice Entity record from the Accounting System</description>
    <inlineHelpText>Lookup to the related Invoice Entity record from the Accounting System</inlineHelpText>
    <label>Accounting Invoice Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice Entity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Invoice Entities</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>