.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_bgl__Accounting_Segments__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_Segments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location for payment and Invoice entities used by the GL package</description>
    <inlineHelpText>Default Location for payment and Invoice entities used by the GL package</inlineHelpText>
    <label>DO NOT USE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Accounts (Accounting Segments)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>