.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_bgl__GL_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__GL_Customer_ID__c</fullName>
    <label>GL Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>