.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_bgl__GL_External_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__GL_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>GL External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>