.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Address_Line_1__c</fullName>
    <description>Business Address Line 1 of source payer for inclusion in STP communication</description>
    <inlineHelpText>Business Address Line 1 of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP Address Line 1</label>
    <length>38</length>
    <type>Text</type>
</CustomField>