.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Contact_Name__c</fullName>
    <description>Contact person for inclusion in STP communication</description>
    <inlineHelpText>Contact person for inclusion in STP communication</inlineHelpText>
    <label>STP Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>