.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_Country__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Country__c</fullName>
    <description>Country of source payer for inclusion in STP communication</description>
    <inlineHelpText>Country of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>