.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_Postcode__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Postcode__c</fullName>
    <description>Post Code of source payer for inclusion in STP communication</description>
    <inlineHelpText>Post Code of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>