.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_State__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_State__c</fullName>
    <description>State of source payer for inclusion in STP communication</description>
    <inlineHelpText>State of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>