.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__STP_Suburb__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Suburb__c</fullName>
    <description>Suburb/Town of source payer for inclusion in STP communication</description>
    <inlineHelpText>Suburb/Town of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP Suburb/Town</label>
    <length>48</length>
    <type>Text</type>
</CustomField>