.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__Superannuation_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Contact_First_Name__c</fullName>
    <description>First Name of appointed Superannuation Contact.</description>
    <inlineHelpText>First Name of appointed Superannuation Contact.</inlineHelpText>
    <label>Superannuation Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>