.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_eau__Superannuation_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Payment_Type__c</fullName>
    <description>The method by which superannuation contributions will be paid - included in SuperChoice Contributions API.</description>
    <inlineHelpText>The method by which superannuation contributions will be paid - included in SuperChoice Contributions API.</inlineHelpText>
    <label>Superannuation Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_eau__Superannuation_Payment_Types</valueSetName>
    </valueSet>
</CustomField>