.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Bank_Account_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Bank_Account_Branch_Code__c</fullName>
    <description>Records the Branch Code of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</description>
    <inlineHelpText>Records the Branch Code of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</inlineHelpText>
    <label>Bank Account Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>