.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Bank_Account_Number__c</fullName>
    <description>Records  the Bank Account Number of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</description>
    <inlineHelpText>Records  the Bank Account Number of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</inlineHelpText>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>