.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Bank_Account_Suffix__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Bank_Account_Suffix__c</fullName>
    <description>Records  the Bank Account Suffix Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</description>
    <inlineHelpText>Records  the Bank Account Suffix Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</inlineHelpText>
    <label>Bank Account Suffix</label>
    <length>7</length>
    <type>Text</type>
</CustomField>