.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Contact_for_Invoice_Queries__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Contact_for_Invoice_Queries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User who will be detailed as the Invoice Entity&apos;s Invoice Contact. The invoice contact and their contact details will be detailed on standard Invoice emails to be used in case of invoice queries.</description>
    <inlineHelpText>Identifies the User who will be detailed as the Invoice Entity&apos;s Invoice Contact. The invoice contact and their contact details will be detailed on standard Invoice emails to be used in case of invoice queries.</inlineHelpText>
    <label>Contact for Invoice Queries</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>