.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Contact_for_Invoice_Queries_Phone__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Contact_for_Invoice_Queries_Phone__c</fullName>
    <description>Defines the phone number for Clients of the User who will be detailed as a Invoice Entity&apos;s Invoice Contact.</description>
    <formula>tc9_et__Contact_for_Invoice_Queries__r.tc9_et__Phone_for_Clients__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the phone number for Clients of the User who will be detailed as a Invoice Entity&apos;s Invoice Contact.</inlineHelpText>
    <label>Contact for Invoice Queries Phone</label>
    <type>Text</type>
</CustomField>