.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Expense_Claim_Funding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Funding_Requirement__c</fullName>
    <description>Indicates funding requirements for Expense Claims at a Client level. This value will be used to populate the Funding Requirement field on related Expense Claim based Pay Transactions</description>
    <inlineHelpText>Indicates funding requirements for Expense Claims at a Client level. This value will be used to populate the Funding Requirement field on related Expense Claim based Pay Transactions</inlineHelpText>
    <label>Expense Claim Funding Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Funding_Requirements_Picklist</valueSetName>
    </valueSet>
</CustomField>