.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Expense_Notification_Setting_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Notification_Setting_Override__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the notification setting which will be used for Expense Claim Notifications when an Assignment is related to the Client. If blank the Expense Claim Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</description>
    <inlineHelpText>Defines the notification setting which will be used for Expense Claim Notifications when an Assignment is related to the Client. If blank the Expense Claim Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</inlineHelpText>
    <label>Expense Notification Setting Override</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Notification_Setting__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Expense_Claim</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Notification_Setting__c</referenceTo>
    <relationshipLabel>Accounts (Expense Notification Setting Override)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>