.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__GST_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__GST_Reg_Number__c</fullName>
    <description>Records the GST Registration number for the Invoice Entity</description>
    <inlineHelpText>Records the GST Registration number for the Invoice Entity</inlineHelpText>
    <label>GST Reg Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>