.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice Contact that will be detailed on invoices when the Invoice Group By of &quot;Client&quot;, &quot;Hiring Manager (Invoice Client)&quot;, &quot;PO Number&quot; and &quot;Invoice To Account&quot; are used. The Invoice Group By of &quot;Assignment&quot; and &quot;Invoice To Contact&quot; will use the Invoice To Contact detailed on the Assignment. Invoice Group By of &quot;Hiring Manager (Invoice Hiring Manager)&quot; will use the Hiring Manager detailed on the Assignment</description>
    <inlineHelpText>Defines the Invoice Contact that will be detailed on invoices when the Invoice Group By of &quot;Client&quot;, &quot;Hiring Manager (Invoice Client)&quot;, &quot;PO Number&quot; and &quot;Invoice To Account&quot; are used.</inlineHelpText>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts with Contact as Invoice Contact</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>