.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Message__c</fullName>
    <description>If the Invoice Message field on the Invoice Setting related to the Invoice is blank, defines the message that will be included on the PDF Invoices created. If blank, the Invoice Message on the Invoice will be blank. Can be overridden at the Invoice level.</description>
    <inlineHelpText>If the Invoice Message field on the Invoice Setting related to the Invoice is blank, defines the message that will be included on the PDF Invoices created. If blank, the Invoice Message on the Invoice will be blank. Can be overridden at the Invoice level</inlineHelpText>
    <label>Invoice Message</label>
    <type>TextArea</type>
</CustomField>