.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Invoice_Split__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Split__c</fullName>
    <description>Defines how the Invoices created including the Pay Transaction will be broken up on creation.</description>
    <inlineHelpText>Defines how the Invoices created including the Pay Transaction will be broken up on creation.</inlineHelpText>
    <label>Invoice Split</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Split_Picklists</valueSetName>
    </valueSet>
</CustomField>