.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Timesheet_Funding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Funding_Requirement__c</fullName>
    <description>Indicates funding requirements for Timesheets at a Client level. This value will be used to populate the Funding Requirement field on related Timesheet based Pay Transactions</description>
    <inlineHelpText>Indicates funding requirements for Timesheets at a Client level. This value will be used to populate the Funding Requirement field on related Timesheet based Pay Transactions</inlineHelpText>
    <label>Timesheet Funding Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Funding_Requirements_Picklist</valueSetName>
    </valueSet>
</CustomField>