.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/tc9_et__Timesheet_Notification_Setting_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Notification_Setting_Override__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the notification setting which will be used for Timesheet Notifications when an Assignment is related to the Client. If blank the Timesheet Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</description>
    <inlineHelpText>Defines the notification setting which will be used for Timesheet Notifications when an Assignment is related to the Client. If blank the Timesheet Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</inlineHelpText>
    <label>Timesheet Notification Setting Override</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Notification_Setting__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Timesheet</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Notification_Setting__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>